코랩에서 수정

--- a/Greedy/이코테/[Day3]6_곱하기_혹은_더하기.ipynb
+++ b/Greedy/이코테/[Day3]6_곱하기_혹은_더하기.ipynb
@@ -3,11 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "6.곱하기 혹은 더하기.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNKWpfR70FkjZCVWDB0OIMU",
+      "authorship_tag": "ABX9TyPtTilBfih2CtI4bQ6Mvw5S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,121 +24,36 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lala991204/CodingTest/blob/master/Greedy/6_%EA%B3%B1%ED%95%98%EA%B8%B0_%ED%98%B9%EC%9D%80_%EB%8D%94%ED%95%98%EA%B8%B0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/lala991204/CodingTest/blob/master/Greedy/%EC%9D%B4%EC%BD%94%ED%85%8C/%5BDay3%5D6_%EA%B3%B1%ED%95%98%EA%B8%B0_%ED%98%B9%EC%9D%80_%EB%8D%94%ED%95%98%EA%B8%B0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# 문제"
-      ],
-      "metadata": {
-        "id": "sih1Zvpdy3OS"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "nE3znlOCvl0u"
-      },
-      "outputs": [],
-      "source": [
-        "# 문제: 0~9로만 이루어진 문자열 S가 주어질 때, 왼쪽부터 오른쪽으로 하나씩 모든 숫자를 확인하며\n",
-        "# 숫자 사이에 'x' 혹은 '+' 연산자를 넣어 결과적으로 만들어질 수 있는 가장 큰 수를 구하시오.\n",
-        "# 단, 왼쪽부터 순서대로 모든 연산이 이루어진다고 가정할 것."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# 작성 코드"
-      ],
-      "metadata": {
-        "id": "tFKBYE4Jy7yV"
-      }
     },
     {
       "cell_type": "code",
       "source": [
-        "import time \n",
-        "s = input()\n",
-        "\n",
-        "start = time.time()\n",
-        "sm = int(s[0])\n",
-        "for i in range(1, len(s)):\n",
-        "    if sm == 0 or sm == 1 or int(s[i]) == 0 or int(s[i]) == 1:\n",
-        "        sm += int(s[i])\n",
-        "    else:\n",
-        "        sm *= int(s[i])\n",
-        "print(sm)\n",
-        "end = time.time()\n",
-        "print(end-start)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "G_4sCPTHwAMd",
-        "outputId": "6c18b631-ab2a-47e8-aae6-78a4d9aa9cde"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "02984\n",
-            "576\n",
-            "0.0014247894287109375\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# 모범 답안"
-      ],
-      "metadata": {
-        "id": "7RfxRbVNy_WD"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "data = input()\n",
-        "\n",
-        "start = time.time()\n",
-        "result = int(data[0])\n",
+        "data = list(map(int, input()))\n",
+        "result = data[0]       # initialization for start point\n",
         "for i in range(1, len(data)):\n",
-        "    num = int(data[i])\n",
-        "    if num <= 1 or result <= 1:\n",
-        "        result += num\n",
+        "    if result <= 1 or data[i] <= 1:    # 두 수 <=1 체크\n",
+        "        result += data[i]\n",
         "    else:\n",
-        "        result *= num\n",
-        "print(result)\n",
-        "end = time.time()\n",
-        "print(end-start)\n",
-        "\n",
-        "# Tip1: 0 또는 1이 곧 <=1라 적을 수 있다. 나머지는 위의 답안과 동일"
+        "        result *= data[i]\n",
+        "print(result)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "2iNHBpuay1fa",
-        "outputId": "40812e6b-acb0-4ac1-aaf0-4b6255db9910"
+        "id": "wDZ5Z6kKHyyW",
+        "outputId": "b9e37287-1235-42f3-bffa-1c3d1d7b7ad7"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "02984\n",
-            "576\n",
-            "0.001401662826538086\n"
+            "576\n"
           ]
         }
       ]
