Colaboratory를 통해 생성됨

--- a/Programmers/정렬_H_index.ipynb
+++ b/Programmers/정렬_H_index.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHdtOg9GDATrNtshB4yAP0",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNJtXT0Usy08KtKOYpqF1AJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,16 +30,37 @@
     {
       "cell_type": "code",
       "source": [
+        "# ascending\n",
         "def solution(citations):\n",
         "    citations.sort()\n",
         "    l = len(citations)\n",
-        "    for i in range(l):\n",
+        "    for i in range(l):              # (or) for i, cite in enumerate(citations):\n",
         "        if citations[i] >= l-i:\n",
         "            return l-i\n",
-        "    return 0"
+        "    return 0           # ex: [0,0,0,0,0]"
       ],
       "metadata": {
         "id": "RDRUlFETr1sj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# descending\n",
+        "def solution(citations):\n",
+        "    citations.sort(reverse=True)\n",
+        "    h_ind = 1\n",
+        "    for cite in citations:\n",
+        "        if cite >= h_ind:\n",
+        "            h_ind += 1\n",
+        "        else:\n",
+        "            return h_ind - 1\n",
+        "    return h_ind - 1   # ex: [5,5,5,5,5]"
+      ],
+      "metadata": {
+        "id": "RQIRIm5gbZWt"
       },
       "execution_count": null,
       "outputs": []
